# ModelEnvoy

./: .gitignore  README.md  example.py  pyproject.toml
.serena/: project.yml
model_envoy/: __init__.py  consult.py
model_envoy/transports/: opencode.py
src/model_envoy/: __init__.py  cli.py  consult.py  result.py
src/model_envoy/transports/: base.py  opencode.py
tests/: test_port_handling.py  test_public_api.py  test_result.py  test_server_manager.py
tests/transports/: test_base.py  test_opencode.py
