[project]
name = "model_envoy"
version = "0.1.0"
description = "Consult AI agents from AI agents"
requires-python = ">=3.10"
dependencies = ["httpx>=0.28"]
license = "MIT"
readme = "README.md"
authors = [{ name = "ModelEnvoy contributors" }]
keywords = ["ai", "llm", "agent", "opencode"]

[project.scripts]
model-envoy = "model_envoy.cli:main"

[project.optional-dependencies]
test = ["pytest>=8", "pytest-httpx>=0.31"]
dev = ["pytest>=8", "pytest-httpx>=0.31"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/model_envoy"]

[tool.pytest.ini_options]
minversion = "8"
testpaths = ["tests"]
filterwarnings = ["error", "ignore::ResourceWarning"]